@@ -28,7 +28,6 @@ import org.thingsboard.server.common.data.id.CalculatedFieldId;
 import org.thingsboard.server.common.data.id.EntityId;
 import org.thingsboard.server.common.data.id.TenantId;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -42,6 +41,7 @@ import java.util.stream.Collectors;
         @Type(value = ScriptCalculatedFieldConfiguration.class, name = "SCRIPT"),
         @Type(value = GeofencingCalculatedFieldConfiguration.class, name = "GEOFENCING"),
         @Type(value = AlarmCalculatedFieldConfiguration.class, name = "ALARM"),
+        @Type(value = PropagationCalculatedFieldConfiguration.class, name = "PROPAGATION"),
         @Type(value = LatestValuesAggregationCalculatedFieldConfiguration.class, name = "LATEST_VALUES_AGGREGATION")
 })
 @JsonIgnoreProperties(ignoreUnknown = true)
@@ -56,7 +56,7 @@ public interface CalculatedFieldConfiguration {
 
     @JsonIgnore
     default List<EntityId> getReferencedEntities() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     default CalculatedFieldLink buildCalculatedFieldLink(TenantId tenantId, EntityId referencedEntityId, CalculatedFieldId calculatedFieldId) {
